--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -26,7 +26,7 @@ jobs:
       
       - name: build docker image
         run: |
-          docker build -t davejfranco/python-fastapi-demo:${{ github.sha }} .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/tesis-ci-cd:${{ github.sha }} .
       
       - name: docker login
         uses: docker/login-action@v1
@@ -38,25 +38,3 @@ jobs:
         run: |
           docker push davejfranco/python-fastapi-demo:${{ github.sha }}
 
-    outputs:
-      image: davejfranco/python-fastapi-demo:${{ github.sha }}
-  
-  cd:
-    needs: ci
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: AWS authentication
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
-          role-duration-seconds: 1200
-          role-session-name: ${{ github.sha }}
-          aws-region: us-east-1
-      
-      - name: update deployment
-        run: |
-          aws eks update-kubeconfig --name ${{ secrets.CLUSTER_NAME }} --region us-east-1
-          kubectl set image deployment/python-fastapi-deployment api=davejfranco/python-fastapi-demo:${{ needs.ci.outputs.image }} -n app
-        
-  
