--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -36,5 +36,4 @@ jobs:
       
       - name: push docker image
         run: |
-          docker push davejfranco/python-fastapi-demo:${{ github.sha }}
-
+          docker push josmellbu/tesis-ci-cd:${{ github.sha }}
